--- a/.github/workflows/lighthouse-badger.yml
+++ b/.github/workflows/lighthouse-badger.yml
@@ -54,6 +54,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: "myactionway/lighthouse-badges"
+          token: ${{ secrets.GITHUB_TOKEN }}
           path: temp_lighthouse_badges_nested
       - uses: myactionway/lighthouse-badger-action@v2.2
         with:
