adding GLU logo to footer of landing page

--- a/_config.yml
+++ b/_config.yml
@@ -85,6 +85,7 @@ inspirehep_id: # Inspire HEP author ID
 instagram_id: # your instagram id
 kaggle_id: # your kaggle id
 keybase_username: # your keybase user name
+laborunion: https://umdgradworkers.org/ # URL to UMD-GLU
 lastfm_id: # your lastfm id
 lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 linkedin_username: # your LinkedIn user name
