--- a/_config.yml
+++ b/_config.yml
@@ -316,7 +316,7 @@ scholar:
   last_name: [Rozowski]
   first_name: [Michael, Michael P.]
 
-  style: apa
+  style: inventiones-mathematicae # apa
   locale: en
 
   source: /_bibliography/
