--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
-  If you think there some possibility for a collaboration, please feel free to send me an e-mail!
+  If you think there some possibility for a collaboration, please feel free to send me an e-mail at mrozowsk [at] umd [dot] edu!
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -429,7 +429,7 @@ lazy_loading_images: true # enables lazy loading of images (recommended)
 # Optional Features
 # -----------------------------------------------------------------------------
 
-enable_google_analytics: false # enables google analytics
+enable_google_analytics: true # enables google analytics
 enable_cronitor_analytics: false # enables cronitor RUM analytics
 enable_pirsch_analytics: false # enables Pirsch analytics (https://pirsch.io/)
 enable_google_verification: false # enables google site verification
